--- a/docs/src/scss/spectre-rtl.scss
+++ b/docs/src/scss/spectre-rtl.scss
@@ -2,5 +2,4 @@
 $rtl: true;
 
 // Import Spectre
-@import "../../../src/spectre";
-@import "../../../src/spectre-exp";
+@import "../../../src/index";
