--- a/src/_navbar.scss
+++ b/src/_navbar.scss
@@ -1,28 +1,45 @@
 // Navbar
 .navbar {
-  align-items: stretch;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	align-items: stretch;
+	display: flex;
+	flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: $bg-color-dark;
+    padding: $layout-spacing-sm $layout-spacing-lg;
+    color: $light-color;
 
-  .navbar-section {
-    align-items: center;
-    display: flex;
-    flex: 1 0 0;
-
-    &:not(:first-child):last-child {
-      justify-content: flex-end;
+    .navbar-primary {
+        display: flex;
     }
-  }
 
-  .navbar-center {
-    align-items: center;
-    display: flex;
-    flex: 0 0 auto;
-  }
+	.navbar-section {
+		align-items: center;
+		display: flex;
+		flex: 1 0 0;
 
-  .navbar-brand {
-    font-size: $font-size-lg;
-    text-decoration: none;
-  }
+		&:not(:first-child):last-child {
+			justify-content: flex-end;
+		}
+	}
+
+	.navbar-center {
+		align-items: center;
+		display: flex;
+		flex: 0 0 auto;
+	}
+
+	.navbar-brand {
+		font-size: $font-size-lg;
+        text-decoration: none;
+    }
+    
+    img.navbar-brand, .navbar-brand img {
+        // Using logos instead of text as .navbar-brand
+        display: block;
+        max-height: 40px;
+    }
+
+    .btn.btn-link {
+        color: currentColor;
+    }
 }
