--- a/docs/components/tiles.html
+++ b/docs/components/tiles.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Tiles are repeatable or embeddable information blocks. Spectre.css CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
     <meta name="author" content="Yan Zhu">
-    <meta property="og:url" content="https://picturepan2.github.io/spectre/components/tiles.html">
+    <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/tiles.html">
     <meta property="og:title" content="Tiles - Components - Spectre.css CSS Framework">
     <meta property="og:description" content="Tiles are repeatable or embeddable information blocks. Spectre.css CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
     <meta name="twitter:card" content="summary">
@@ -16,11 +16,11 @@
     <meta name="twitter:creator" content="@picturepan2">
     <link rel="shortcut icon" href="../img/favicons/favicon.ico">
     <link rel="icon" href="../img/favicons/favicon.png">
-    <link rel="stylesheet" href="../dist/spectre.min.css">
-    <link rel="stylesheet" href="../dist/spectre-icons.min.css">
-    <link rel="stylesheet" href="../dist/spectre-exp.min.css">
+    <link rel="stylesheet" href="../dist/rsui.min.css">
+    <link rel="stylesheet" href="../dist/rsui-icons.min.css">
+    <link rel="stylesheet" href="../dist/rsui-experimental.min.css">
     <link rel="stylesheet" href="../dist/docs.min.css">
-    <link rel="canonical" href="https://picturepan2.github.io/spectre/components/tiles.html">
+    <link rel="canonical" href="https://burkson.github.io/ridestyler.ui/components/tiles.html">
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
