--- a/docs/src/_layout/_layout.pug
+++ b/docs/src/_layout/_layout.pug
@@ -1,12 +1,12 @@
 block global
-  - var domain = 'https://picturepan2.github.io/spectre/'
+  - var domain = 'https://burkson.github.io/ridestyler.ui/'
   - var url = domain
 
 block variables
   - var slug = ''
   - var parent = ''
-  - var title = 'Spectre.css - A Lightweight, Responsive and Modern CSS Framework'
-  - var description = 'Spectre.css CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. Spectre provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.'
+  - var title = 'ridestyler.ui'
+  - var description = 'ridestyler.ui is the CSS framework used by RideStyler branded apps.'
 
 if slug == parent
   if slug == 'index'
@@ -35,16 +35,16 @@ html(lang='en')
     if slug != parent
       link(rel='shortcut icon' href='../img/favicons/favicon.ico')
       link(rel='icon' href='../img/favicons/favicon.png')
-      link(rel='stylesheet' href='../dist/spectre.min.css')
-      link(rel='stylesheet' href='../dist/spectre-icons.min.css')
-      link(rel='stylesheet' href='../dist/spectre-exp.min.css')
+      link(rel='stylesheet' href='../dist/rsui.min.css')
+      link(rel='stylesheet' href='../dist/rsui-icons.min.css')
+      link(rel='stylesheet' href='../dist/rsui-experimental.min.css')
       link(rel='stylesheet' href='../dist/docs.min.css') 
     else 
       link(rel='shortcut icon' href='img/favicons/favicon.ico')
       link(rel='icon' href='img/favicons/favicon.png')
-      link(rel='stylesheet' href='dist/spectre.min.css')
-      link(rel='stylesheet' href='dist/spectre-icons.min.css')
-      link(rel='stylesheet' href='dist/spectre-exp.min.css')
+      link(rel='stylesheet' href='dist/rsui.min.css')
+      link(rel='stylesheet' href='dist/rsui-icons.min.css')
+      link(rel='stylesheet' href='dist/rsui-experimental.min.css')
       link(rel='stylesheet' href='dist/docs.min.css')
     link(rel='canonical' href= url)
 
