--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -1,4 +1,4 @@
-/*! Spectre.css Docs | MIT License | github.com/picturepan2/spectre */
+/*! ridestyler.ui Docs */
 // Core variables and mixins
 @import "../../../src/variables";
 @import "../../../src/mixins";
