Fixes the fonts build

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,6 @@
 // Core variables
-$version: "0.5.8";
+$version: "{PACKAGE_VERSION}";
+$font-base: "./fonts/";
 
 // Core features
 $rtl: false !default;
