Moves $font-base to hosted fonts on static.ridestyler.net

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 // Core variables
 $version: "{PACKAGE_VERSION}";
-$font-base: "./fonts/";
+$font-base: "https://static.ridestyler.net/fonts/";
 
 // Core features
 $rtl: false !default;
