--- a/src/utilities/_colors.scss
+++ b/src/utilities/_colors.scss
@@ -15,6 +15,8 @@
 
 @include text-color-variant(".text-error", $error-color);
 
+@include text-color-variant(".text-active", $active-color);
+
 // Background colors
 @include bg-color-variant(".bg-primary", $primary-color);
 
