--- a/src/utilities/_position.scss
+++ b/src/utilities/_position.scss
@@ -42,13 +42,14 @@
 
 // Spacing
 @include margin-variant(0, 0);
-
 @include margin-variant(1, $unit-1);
-
 @include margin-variant(2, $unit-2);
+@include margin-variant(3, $unit-3);
+@include margin-variant(4, $unit-4);
 
 @include padding-variant(0, 0);
 
 @include padding-variant(1, $unit-1);
-
 @include padding-variant(2, $unit-2);
+@include padding-variant(3, $unit-3);
+@include padding-variant(4, $unit-4);
