--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -1,43 +1,50 @@
 // Cards
 .card {
-  background: $bg-color-light;
-  border: $border-width solid $border-color;
-  border-radius: $border-radius;
-  display: flex;
-  flex-direction: column;
+	$card-padding: $layout-spacing;
 
-  .card-header,
-  .card-body,
-  .card-footer {
-    padding: $layout-spacing-lg;
-    padding-bottom: 0;
-
-    &:last-child {
-      padding-bottom: $layout-spacing-lg;
-    }
-  }
-
-  .card-body {
-    flex: 1 1 auto;
-  }
-
-  .card-image {
-    padding-top: $layout-spacing-lg;
-
-    &:first-child {
-      padding-top: 0;
-
-      img {
+	background: $bg-color-light;
+	border-radius: $border-radius;
+	display: flex;
+	flex-direction: column;
+    @include shadow-variant(1rem);
+    
+    .card-header {
         border-top-left-radius: $border-radius;
         border-top-right-radius: $border-radius;
-      }
     }
 
-    &:last-child {
-      img {
-        border-bottom-left-radius: $border-radius;
-        border-bottom-right-radius: $border-radius;
-      }
-    }
-  }
+	.card-header,
+	.card-body,
+	.card-footer {
+		padding: $card-padding;
+		padding-bottom: 0;
+
+		&:last-child {
+			padding-bottom: $card-padding;
+		}
+	}
+
+	.card-body {
+		flex: 1 1 auto;
+	}
+
+	.card-image {
+		padding-top: $card-padding;
+
+		&:first-child {
+			padding-top: 0;
+
+			img {
+				border-top-left-radius: $border-radius;
+				border-top-right-radius: $border-radius;
+			}
+		}
+
+		&:last-child {
+			img {
+				border-bottom-left-radius: $border-radius;
+				border-bottom-right-radius: $border-radius;
+			}
+		}
+	}
 }
