--- a/src/_chips.scss
+++ b/src/_chips.scss
@@ -1,33 +1,37 @@
 // Chips
 .chip {
-  align-items: center;
-  background: $bg-color-dark;
-  border-radius: 5rem;
-  display: inline-flex;
-  font-size: 90%;
-  height: $unit-6;
-  line-height: $unit-4;
-  margin: $unit-h;
-  max-width: $control-width-sm;
-  overflow: hidden;
-  padding: $unit-1 $unit-2;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  vertical-align: middle;
-  white-space: nowrap;
+	align-items: center;
+	background: $bg-color-dark;
+	border-radius: 5rem;
+	display: inline-flex;
+	font-size: 90%;
+	height: $unit-6;
+	line-height: $unit-4;
+	margin: $unit-h;
+	max-width: $control-width-sm;
+	overflow: hidden;
+	padding: $unit-1 $unit-2;
+	text-decoration: none;
+	text-overflow: ellipsis;
+	vertical-align: middle;
+	white-space: nowrap;
 
-  &.active {
-    background: $primary-color;
-    color: $light-color;
-  }
+	&.active {
+		background: $primary-color;
+		color: $light-color;
+    }
+    
+    &.secondary {
+        background-color: $secondary-color;
+    }
 
-  .avatar {
-    margin-left: -$unit-2;
-    margin-right: $unit-1;
-  }
+	.avatar {
+		margin-left: -$unit-2;
+		margin-right: $unit-1;
+	}
 
-  .btn-clear {
-    border-radius: 50%;
-    transform: scale(.75);
-  }
+	.btn-clear {
+		border-radius: 50%;
+		transform: scale(.75);
+	}
 }
