--- a/src/_menus.scss
+++ b/src/_menus.scss
@@ -1,66 +1,81 @@
 // Menus
 .menu {
-  @include shadow-variant(.05rem);
-  background: $bg-color-light;
-  border-radius: $border-radius;
-  list-style: none;
-  margin: 0;
-  min-width: $control-width-xs;
-  padding: $unit-2;
-  transform: translateY($layout-spacing-sm);
-  z-index: $zindex-3;
+	background: $bg-color-light;
+	border-radius: $border-radius;
+	list-style: none;
+	margin: 0;
+	min-width: $control-width-sm;
+	padding: $layout-spacing-sm;
+    z-index: $zindex-3;
+    color: $dark-color;
 
-  &.menu-nav {
-    background: transparent;
-    box-shadow: none;
-  }
+	&.menu-nav {
+		background: transparent;
+		box-shadow: none;
+	}
 
-  .menu-item {
-    margin-top: 0;
-    padding: 0 $unit-2;
-    position: relative;
-    text-decoration: none;
+	.menu-item {
+		$menu-item-padding-x: $control-padding-x-sm;
+		$menu-item-padding-y: $control-padding-y-sm;
 
-    & > a {
-      border-radius: $border-radius;
-      color: inherit;
-      display: block;
-      margin: 0 (-$unit-2);
-      padding: $unit-1 $unit-2;
-      text-decoration: none;
-      &:focus,
-      &:hover {
-        background: $secondary-color;
-        color: $primary-color;
-      }
-      &:active,
-      &.active {
-        background: $secondary-color;
-        color: $primary-color;
-      }
-    }
+		margin-top: 0;
+		padding: $menu-item-padding-y $menu-item-padding-x;
+		position: relative;
+		text-decoration: none;
 
-    .form-checkbox,
-    .form-radio,
-    .form-switch {
-      margin: $unit-h 0;
-    }
+		&>a {
+			color: inherit;
+			margin: (-$menu-item-padding-y) (-$menu-item-padding-x);
+			padding: $menu-item-padding-y $menu-item-padding-x;
+            text-decoration: none;
+            
+            display: flex;
+            align-items: center;
 
-    & + .menu-item {
-      margin-top: $unit-1;
-    }
-  }
+			&:focus,
+			&:hover {
+				background: $secondary-color;
+				color: $primary-color;
+			}
 
-  .menu-badge {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
+			&:active,
+			&.active {
+				background: $secondary-color;
+				color: $primary-color;
+			}
+        }
+        
+        .avatar {
+            &:first-child{
+                margin-right: $unit-2;
+            }
+        }
 
-    .label {
-      margin-right: $unit-2;
-    }
-  }
+        .form-checkbox,
+		.form-radio,
+		.form-switch {
+			margin: $unit-h 0;
+		}
+
+		&+.menu-item {
+			margin-top: $unit-1;
+		}
+
+		&.disabled {
+			color: $gray-color-dark;
+		}
+	}
+
+	.menu-badge {
+		align-items: center;
+		display: flex;
+		height: 100%;
+		position: absolute;
+		right: 0;
+		top: 0;
+
+		.label {
+			margin-right: $unit-2;
+		}
+	}
 }
