--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -6,7 +6,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: inherit;
+	color: $heading-color;
 	line-height: 1.2;
 	margin-bottom: .5em;
 	margin-top: 0;
@@ -18,33 +18,33 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-	font-family: $header-font-family;
+	font-family: $heading-font-family;
     font-weight: bold;
     
     &.header {
         background-color: $bg-color-gray;
-        padding: $layout-spacing-lg $layout-spacing-lg;
+        padding: $layout-spacing $layout-spacing-lg;
     }
 }
 
 h1,
 .h1 {
-    font-size: 2rem;
+    font-size: 4.625rem;
 }
 
 h2,
 .h2 {
-	font-size: 1.6rem;
+	font-size: 2.75rem;
 }
 
 h3,
 .h3 {
-	font-size: 1.4rem;
+	font-size: 2rem;
 }
 
 h4,
 .h4 {
-	font-size: 1.2rem;
+	font-size: 1.375rem;
 }
 
 h5,
