--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,7 @@ $font-base: "https://static.ridestyler.net/fonts/";
 $rtl: false !default;
 
 // RideStyler Colors
-$ridestyler-color-black: #0D192B;
+$ridestyler-color-black: #0D112B;
 $ridestyler-color-dark-gray: #556172;
 $ridestyler-color-gray: #7A8798;
 $ridestyler-color-orange: #F3693C;
@@ -22,17 +22,17 @@ $secondary-color-dark: darken($secondary-color, 3%) !default;
 $secondary-color-light: lighten($secondary-color, 3%) !default;
 
 // Gray colors
-$dark-color: #303742 !default;
+$dark-color: $ridestyler-color-black !default;
 $light-color: #fff !default;
 $gray-color: #E6EBF2 !default;
 $gray-color-dark: darken($gray-color, 30%) !default;
 $gray-color-light: lighten($gray-color, 20%) !default;
 
-$border-color: lighten($dark-color, 65%) !default;
-$border-color-dark: darken($border-color, 10%) !default;
-$border-color-light: lighten($border-color, 8%) !default;
-$bg-color: lighten($dark-color, 75%) !default;
-$bg-color-dark: #3c4553 !default;
+$border-color: $ridestyler-color-dark-gray !default;
+$border-color-dark: $ridestyler-color-black !default;
+$border-color-light: $ridestyler-color-gray !default;
+$bg-color: $gray-color !default;
+$bg-color-dark: $ridestyler-color-black !default;
 $bg-color-light: $light-color !default;
 $bg-color-gray: $gray-color !default;
 
@@ -40,12 +40,14 @@ $bg-color-gray: $gray-color !default;
 $success-color: #32b643 !default;
 $warning-color: #ffb700 !default;
 $error-color: #e85600 !default;
+$active-color: $ridestyler-color-orange !default;
 
 // Other colors
+$heading-color: $ridestyler-color-black !default;
 $code-color: #d73e48 !default;
 $highlight-color: #ffe9b3 !default;
 $body-bg: $bg-color-light !default;
-$body-font-color: lighten($dark-color, 5%) !default;
+$body-font-color: $ridestyler-color-black !default;
 $link-color: $primary-color !default;
 $link-color-dark: darken($link-color, 10%) !default;
 $link-color-light: lighten($link-color, 10%) !default;
@@ -59,45 +61,45 @@ $cjk-zh-hant-font-family: $base-font-family, "PingFang TC", "Hiragino Sans CNS",
 $cjk-jp-font-family: $base-font-family, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "Yu Gothic", YuGothic, Meiryo, $fallback-font-family !default;
 $cjk-ko-font-family: $base-font-family, "Malgun Gothic", $fallback-font-family !default;
 $body-font-family: $base-font-family, $fallback-font-family !default;
-$header-font-family: "Geomanist", $base-font-family;
+$heading-font-family: "Geomanist", $base-font-family;
 
 // Unit sizes
 $unit-o: .05rem !default;
 $unit-h: .1rem !default;
-$unit-1: .2rem !default;
-$unit-2: .4rem !default;
-$unit-3: .6rem !default;
-$unit-4: .8rem !default;
-$unit-5: 1rem !default;
-$unit-6: 1.2rem !default;
-$unit-7: 1.4rem !default;
-$unit-8: 1.6rem !default;
-$unit-9: 1.8rem !default;
-$unit-10: 2rem !default;
-$unit-12: 2.4rem !default;
-$unit-16: 3.2rem !default;
+$unit-1: .4rem !default;
+$unit-2: .8rem !default;
+$unit-3: 1.2rem !default;
+$unit-4: 1.6rem !default;
+$unit-5: 2rem !default;
+$unit-6: 2.4rem !default;
+$unit-7: 2.8rem !default;
+$unit-8: 3.2rem !default;
+$unit-9: 3.6rem !default;
+$unit-10: 4rem !default;
+$unit-12: 4.8rem !default;
+$unit-16: 6.4rem !default;
 
 // Font sizes
-$html-font-size: 20px !default;
-$html-line-height: 1.5 !default;
-$font-size: .8rem !default;
-$font-size-sm: .7rem !default;
-$font-size-lg: .9rem !default;
-$line-height: 1.2rem !default;
+$html-font-size: 16px !default;
+$html-line-height: 1.625rem !default;
+$font-size: 1rem !default;
+$font-size-sm: .75rem !default;
+$font-size-lg: 1.25rem !default;
+$line-height: 1.625rem !default;
 
 // Sizes
-$layout-spacing: $unit-2 !default;
-$layout-spacing-sm: $unit-1 !default;
-$layout-spacing-lg: $unit-4 !default;
-$border-radius: $unit-h !default;
+$layout-spacing: $unit-3 !default;
+$layout-spacing-sm: $unit-2 !default;
+$layout-spacing-lg: $unit-8 !default;
+$border-radius: $unit-1 !default;
 $border-width: $unit-o !default;
 $border-width-lg: $unit-h !default;
 $control-size: $unit-9 !default;
 $control-size-sm: $unit-7 !default;
-$control-size-lg: $unit-10 !default;
+$control-size-lg: $unit-16 !default;
 $control-padding-x: $unit-2 !default;
-$control-padding-x-sm: $unit-2 * .75 !default;
-$control-padding-x-lg: $unit-2 * 1.5 !default;
+$control-padding-x-sm: $control-padding-x * .75 !default;
+$control-padding-x-lg: $control-padding-x * 1.5 !default;
 $control-padding-y: ($control-size - $line-height) / 2 - $border-width !default;
 $control-padding-y-sm: ($control-size-sm - $line-height) / 2 - $border-width !default;
 $control-padding-y-lg: ($control-size-lg - $line-height) / 2 - $border-width !default;
