--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,7 +30,7 @@ $gray-color-light: lighten($gray-color, 20%) !default;
 
 $border-color: $ridestyler-color-dark-gray !default;
 $border-color-dark: $ridestyler-color-black !default;
-$border-color-light: $ridestyler-color-gray !default;
+$border-color-light: $gray-color !default;
 $bg-color: $gray-color !default;
 $bg-color-dark: $ridestyler-color-black !default;
 $bg-color-light: $light-color !default;
@@ -93,18 +93,19 @@ $layout-spacing: $unit-3 !default;
 $layout-spacing-sm: $unit-2 !default;
 $layout-spacing-lg: $unit-8 !default;
 $border-radius: $unit-1 !default;
+$border-radius-sm: $border-radius * 0.75 !default;
 $border-width: $unit-o !default;
 $border-width-lg: $unit-h !default;
-$control-size: $unit-9 !default;
-$control-size-sm: $unit-7 !default;
-$control-size-lg: $unit-16 !default;
+$control-size: $unit-7 !default;
+$control-size-sm: $unit-6 !default;
+$control-size-lg: $unit-12 !default;
 $control-padding-x: $unit-2 !default;
 $control-padding-x-sm: $control-padding-x * .75 !default;
 $control-padding-x-lg: $control-padding-x * 1.5 !default;
 $control-padding-y: ($control-size - $line-height) / 2 - $border-width !default;
 $control-padding-y-sm: ($control-size-sm - $line-height) / 2 - $border-width !default;
 $control-padding-y-lg: ($control-size-lg - $line-height) / 2 - $border-width !default;
-$control-icon-size: .8rem !default;
+$control-icon-size: $unit-4 !default;
 
 $control-width-xs: 180px !default;
 $control-width-sm: 320px !default;
