--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -8,7 +8,6 @@ h5,
 h6 {
 	color: $heading-color;
 	line-height: 1.2;
-	margin-bottom: .5em;
 	margin-top: 0;
 }
 
@@ -27,34 +26,43 @@ h6, .h6 {
     }
 }
 
+$heading-padding-sm: 0.5rem;
+$heading-padding-lg: 1rem;
+
 h1,
 .h1 {
     font-size: 2.625rem;
+	margin-bottom: $heading-padding-lg;
 }
 
 h2,
 .h2 {
 	font-size: 1.75rem;
+	margin-bottom: $heading-padding-lg;
 }
 
 h3,
 .h3 {
 	font-size: 1.25rem;
+	margin-bottom: $heading-padding-lg;
 }
 
 h4,
 .h4 {
 	font-size: 1rem;
+	margin-bottom: $heading-padding-sm;
 }
 
 h5,
 .h5 {
 	font-size: .8rem;
+	margin-bottom: $heading-padding-sm;
 }
 
 h6,
 .h6 {
 	font-size: .7rem;
+	margin-bottom: $heading-padding-sm;
 }
 
 // Paragraphs
