--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -57,6 +57,9 @@ h4,
 .h4 {
 	font-size: 1.375rem;
 	margin-bottom: $heading-padding-sm;
+
+	font-family: $heading-font-family;
+    font-weight: bold;
 }
 
 h5,
