--- a/src/utilities/_colors.scss
+++ b/src/utilities/_colors.scss
@@ -31,3 +31,5 @@
 @include bg-color-variant(".bg-warning", $warning-color);
 
 @include bg-color-variant(".bg-error", $error-color);
+
+@include bg-color-variant(".bg-ridestyler-orange", $ridestyler-color-orange);
