--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,14 +30,14 @@ $secondary-color-light: lighten($secondary-color, 3%) !default;
 // Gray colors
 $dark-color: $ridestyler-color-black !default;
 $light-color: #fff !default;
-$gray-color: #E6EBF2 !default;
-$gray-color-dark: $ridestyler-color-dark-gray !default;
+$gray-color: $ridestyler-color-gray !default;
+$gray-color-dark: darken($gray-color, 20%) !default;
 $gray-color-light: lighten($gray-color, 20%) !default;
 
 $border-color: $ridestyler-color-dark-gray !default;
 $border-color-dark: $ridestyler-color-black !default;
 $border-color-light: $gray-color !default;
-$bg-color: $gray-color !default;
+$bg-color: $secondary-color !default;
 $bg-color-dark: $ridestyler-color-black !default;
 $bg-color-light: $light-color !default;
 $bg-color-gray: $gray-color !default;
@@ -49,7 +49,6 @@ $error-color: #e85600 !default;
 $active-color: $ridestyler-color-orange !default;
 
 // Other colors
-$heading-color: $ridestyler-color-black !default;
 $code-color: #d73e48 !default;
 $highlight-color: #ffe9b3 !default;
 $body-bg: $bg-color-light !default;
