--- a/docs/src/_layout/_footer.pug
+++ b/docs/src/_layout/_footer.pug
@@ -1,19 +1,13 @@
 #copyright.docs-footer.container.grid-lg
   p
-    a(href='https://github.com/picturepan2/ridestyler.ui' target='_blank') GitHub
+    a(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
     |  · 
-    a(href='https://twitter.com/ridestyler.uicss' target='_blank') Twitter
-    |  · 
-    a(href='https://www.paypal.me/picturepan2' target='_blank') PayPal Donate
-    |  · 
-    a(href='https://www.patreon.com/ridestyler.uicss' target='_blank') Patreon Sponsor
+    a(href='https://ridestyler.com' target='_blank') RideStyler
     |  · Version 
     span.version
   p
-    | Designed and built with 
-    span.text-error &hearts;
-    |  by 
-    a(href='https://twitter.com/picturepan2' target='_blank') Yan Zhu
-    | . Licensed under the 
-    a(href='https://github.com/picturepan2/ridestyler.ui/blob/master/LICENSE' target='_blank') MIT License
+    | Built with 
+    i.icon.icon-brain
+    | s by 
+    a(href='https://www.ridestyler.com' target='_blank') RideStyler
     | .
