--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -45,7 +45,7 @@ $bg-color-gray: $gray-color !default;
 // Control colors
 $success-color: #32b643 !default;
 $warning-color: #ffb700 !default;
-$error-color: #e85600 !default;
+$error-color: #ff0000 !default;
 $active-color: $ridestyler-color-orange !default;
 
 // Other colors
