--- a/src/_labels.scss
+++ b/src/_labels.scss
@@ -1,6 +1,7 @@
 // Labels
 .label {
   @include label-base();
+
   display: inline-block;
 
   // Label rounded
@@ -12,11 +13,7 @@
 
   // Label colors
   &.label-primary {
-    @include label-variant($light-color, $primary-color);
-  }
-
-  &, &.label-secondary {
-    @include label-variant($body-font-color, $secondary-color);
+    @include label-variant($light-color, $active-color);
   }
 
   &.label-success {
