--- a/src/_chips.scss
+++ b/src/_chips.scss
@@ -1,7 +1,7 @@
 // Chips
 .chip {
 	align-items: center;
-	background: $bg-color-dark;
+	background: $bg-color;
 	border-radius: 5rem;
 	display: inline-flex;
 	font-size: 90%;
