Improves table hover styling and adds an example for the active row to the docs

--- a/docs/src/elements/tables.pug
+++ b/docs/src/elements/tables.pug
@@ -84,7 +84,7 @@ block docs-content
               td Schindler's List
               td Biography, Drama, History
               td 4 February 1994
-            tr
+            tr.active
               td Se7en
               td Crime, Drama, Mystery
               td 22 September 1995
