--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -38,7 +38,7 @@ $border-color: $ridestyler-color-dark-gray !default;
 $border-color-dark: $ridestyler-color-black !default;
 $border-color-light: $gray-color !default;
 $bg-color: $secondary-color !default;
-$bg-color-dark: $ridestyler-color-black !default;
+$bg-color-dark: #d3d8df !default;
 $bg-color-light: $light-color !default;
 $bg-color-gray: $gray-color !default;
 
