Fixes spacing on empty states

--- a/docs/components/empty.html
+++ b/docs/components/empty.html
@@ -204,7 +204,7 @@
             <div class="docs-demo columns">
               <div class="column col-12">
                 <div class="empty">
-                  <div class="empty-icon"><i class="icon icon-3x icon-mail"></i></div>
+                  <div class="empty-icon"><i class="icon icon-3x icon-envelope-open-text"></i></div>
                   <p class="empty-title h5">You have no new messages</p>
                   <p class="empty-subtitle">Click the button to start a conversation</p>
                   <div class="empty-action">
@@ -214,7 +214,7 @@
               </div>
               <div class="column col-12">
                 <div class="empty">
-                  <div class="empty-icon"><i class="icon icon-3x icon-mail"></i></div>
+                  <div class="empty-icon"><i class="icon icon-3x icon-smile-beam"></i></div>
                   <p class="empty-title h5">You've successfully signed up</p>
                   <p class="empty-subtitle">Click the button to invite your friends</p>
                   <div class="empty-action">
@@ -227,7 +227,7 @@
               </div>
               <div class="column col-12">
                 <div class="empty">
-                  <div class="empty-icon"><i class="icon icon-3x icon-people"></i></div>
+                  <div class="empty-icon"><i class="icon icon-3x icon-robot"></i></div>
                   <p class="empty-title h5">You are not following anyone</p>
                   <p class="empty-subtitle">Start to meet new friends</p>
                   <div class="empty-action input-group input-inline">
