--- a/docs/src/components/empty.pug
+++ b/docs/src/components/empty.pug
@@ -16,7 +16,7 @@ block docs-content
       .column.col-12
         .empty
           .empty-icon
-            i.icon.icon-3x.icon-mail
+            i.icon.icon-3x.icon-envelope-open-text
           p.empty-title.h5 You have no new messages
           p.empty-subtitle Click the button to start a conversation
           .empty-action
@@ -24,7 +24,7 @@ block docs-content
       .column.col-12
         .empty
           .empty-icon
-            i.icon.icon-3x.icon-mail
+            i.icon.icon-3x.icon-smile-beam
           p.empty-title.h5 You've successfully signed up
           p.empty-subtitle Click the button to invite your friends
           .empty-action
@@ -34,7 +34,7 @@ block docs-content
       .column.col-12
         .empty
           .empty-icon
-            i.icon.icon-3x.icon-people
+            i.icon.icon-3x.icon-robot
           p.empty-title.h5 You are not following anyone
           p.empty-subtitle Start to meet new friends
           .empty-action.input-group.input-inline
