--- a/src/_empty.scss
+++ b/src/_empty.scss
@@ -1,21 +1,21 @@
 // Empty states (or Blank slates)
 .empty {
-  background: $bg-color;
-  border-radius: $border-radius;
-  color: $gray-color-dark;
-  text-align: center;
-  padding: $unit-16 $unit-8;
+	background: $bg-color;
+	border-radius: $border-radius;
+	color: $gray-color-dark;
+	text-align: center;
+	padding: $unit-16 $unit-8;
 
-  .empty-icon {
-    margin-bottom: $layout-spacing-lg;
-  }
+	.empty-icon {
+		margin-bottom: $layout-spacing;
+	}
 
-  .empty-title,
-  .empty-subtitle {
-    margin: $layout-spacing auto;
-  }
+	.empty-title,
+	.empty-subtitle {
+		margin: $layout-spacing auto;
+	}
 
-  .empty-action {
-    margin-top: $layout-spacing-lg;
-  }
+	.empty-action {
+		margin-top: $layout-spacing;
+	}
 }
