--- a/src/_icons.scss
+++ b/src/_icons.scss
@@ -20,6 +20,7 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    vertical-align: middle;
 }
 
 .icon {
