--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -21,23 +21,23 @@ $ridestyler-logo-full-light: 'https://static.ridestyler.net/temp/logos/ridestyle
 
 // Core colors
 $primary-color: $ridestyler-color-blue !default;
-$primary-color-dark: darken($primary-color, 3%) !default;
+$primary-color-dark: darken($primary-color, 10%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
-$secondary-color: #E6EBF2 !default;
-$secondary-color-dark: darken($secondary-color, 3%) !default;
+$secondary-color: $ridestyler-color-orange !default;
+$secondary-color-dark: darken($secondary-color, 10%) !default;
 $secondary-color-light: lighten($secondary-color, 3%) !default;
 
 // Gray colors
 $dark-color: $ridestyler-color-black !default;
 $light-color: #fff !default;
-$gray-color: $ridestyler-color-gray !default;
-$gray-color-dark: darken($gray-color, 20%) !default;
-$gray-color-light: lighten($gray-color, 20%) !default;
+$gray-color: #c7c7c7 !default;
+$gray-color-dark: darken($gray-color, 10%) !default;
+$gray-color-light: lighten($gray-color, 10%) !default;
 
 $border-color: $ridestyler-color-dark-gray !default;
 $border-color-dark: $ridestyler-color-black !default;
 $border-color-light: $gray-color !default;
-$bg-color: $secondary-color !default;
+$bg-color: #E6EBF2 !default;
 $bg-color-dark: #d3d8df !default;
 $bg-color-light: $light-color !default;
 $bg-color-gray: $gray-color !default;
@@ -54,8 +54,8 @@ $highlight-color: #ffe9b3 !default;
 $body-bg: $bg-color-light !default;
 $body-font-color: $ridestyler-color-black !default;
 $link-color: $primary-color !default;
-$link-color-dark: darken($link-color, 10%) !default;
-$link-color-light: lighten($link-color, 10%) !default;
+$link-color-dark: darken($link-color, 20%) !default;
+$link-color-light: lighten($link-color, 20%) !default;
 
 // Fonts
 $base-font-family: "Open Sans" !default;
@@ -85,12 +85,18 @@ $unit-12: 4.8rem !default;
 $unit-16: 6.4rem !default;
 
 // Font sizes
+@function rem-calc($size) {
+    $baseSize: 16px;
+    @return ($size / $baseSize) * 1rem;
+}
+
 $html-font-size: 16px !default;
-$html-line-height: 1.625rem !default;
-$font-size: 1rem !default;
-$font-size-sm: .75rem !default;
-$font-size-lg: 1.25rem !default;
-$line-height: 1.625rem !default;
+$html-line-height: rem-calc(26px) !default;
+$font-size: rem-calc(16px) !default;
+$font-size-button: rem-calc(18px) !default;
+$font-size-sm: rem-calc(14px) !default;
+$font-size-lg: rem-calc(20px) !default;
+$line-height: rem-calc(26px) !default;
 
 // Sizes
 $layout-spacing: $unit-3 !default;
@@ -110,6 +116,18 @@ $control-padding-y: ($control-size - $line-height) / 2 - $border-width !default;
 $control-padding-y-sm: ($control-size-sm - $line-height) / 2 - $border-width !default;
 $control-padding-y-lg: ($control-size-lg - $line-height) / 2 - $border-width !default;
 $control-icon-size: $unit-4 !default;
+
+$button-size: $unit-8 !default;
+$button-padding-x: $unit-2 !default;
+$button-padding-y: ($button-size - $line-height) / 2 !default;
+
+$button-size-sm: $unit-7 !default;
+$button-padding-x-sm: $button-padding-x * 0.75 !default;
+$button-padding-y-sm: ($button-size-sm - $line-height) / 2 !default;
+
+$button-size-lg: $unit-9 !default;
+$button-padding-x-lg: $button-padding-x * 1.5 !default;
+$button-padding-y-lg: ($button-size-lg - $line-height) / 2 !default;
 
 $control-width-xs: 180px !default;
 $control-width-sm: 320px !default;
