--- a/src/mixins/_button.scss
+++ b/src/mixins/_button.scss
@@ -1,58 +1,25 @@
 // Button variant mixin
-@mixin button-variant($color: $primary-color, $color2: $primary-color-dark, $color3: $light-color) {
-  background: $color;
-  border-color: $color2;
+@mixin button-variant($backgroundColor: $primary-color, $activeColor: $primary-color-dark, $activeTextColor: $light-color, $textColor: $body-font-color) {
+  background: $backgroundColor;
 
   &, &:visited {
-    color: $color3;
+    color: $textColor;
   }
   
-  &:focus {
-    @include control-shadow($color);
-  }
   &:focus,
   &:hover {
-    background: darken($color2, 2%);
-    border-color: darken($color2, 5%);
-    color: $color3;
+    background: darken($activeColor, 2%);
+    color: $activeTextColor;
   }
   &:active,
   &.active {
-    background: darken($color2, 7%);
-    border-color: darken($color2, 10%);
-    color: $color3;
+    background: darken($activeColor, 7%);
+    color: $activeTextColor;
   }
   &.loading {
     &::after {
-      border-bottom-color: $color3;
-      border-left-color: $color3;
-    }
-  }
-}
-
-@mixin button-outline-variant($color: $primary-color) {
-  background: $light-color;
-  border-color: $color;
-  color: $color;
-  &:focus {
-    @include control-shadow($color);
-  }
-  &:focus,
-  &:hover {
-    background: lighten($color, 50%);
-    border-color: darken($color, 2%);
-    color: $color;
-  }
-  &:active,
-  &.active {
-    background: $color;
-    border-color: darken($color, 5%);
-    color: $light-color;
-  }
-  &.loading {
-    &::after {
-      border-bottom-color: $color;
-      border-left-color: $color;
+      border-bottom-color: $activeTextColor;
+      border-left-color: $activeTextColor;
     }
   }
 }
