Updating label for primary/secondary styling

--- a/docs/src/elements/labels.pug
+++ b/docs/src/elements/labels.pug
@@ -15,13 +15,14 @@ block docs-content
       .column
         span.label.mr-1 default label
         span.label.label-primary.mr-1 primary label
+        span.label.label-secondary.mr-1 secondary label
         span.label.label-success.mr-1 success label
         span.label.label-warning.mr-1 warning label
         span.label.label-error error label
       
     p
       | Add the #[code label] class to #{'<span>'} or #{'<small>'} elements.
-      | You can add another class #[code label-primary], #[code label-success], #[code label-warning] and #[code label-error] for colored labels.
+      | You can add another class #[code label-primary], #[code label-secondary], #[code label-success], #[code label-warning] and #[code label-error] for colored labels.
 
     pre.code(data-lang='HTML')
       code
