--- a/src/_labels.scss
+++ b/src/_labels.scss
@@ -1,30 +1,34 @@
 // Labels
 .label {
-  @include label-base();
+	@include label-base();
 
-  display: inline-block;
+	display: inline-block;
 
-  // Label rounded
-  &.label-rounded {
-    border-radius: 5rem;
-    padding-left: .4rem;
-    padding-right: .4rem; 
-  }
+	// Label rounded
+	&.label-rounded {
+		border-radius: 5rem;
+		padding-left: .4rem;
+		padding-right: .4rem;
+	}
 
-  // Label colors
-  &.label-primary {
-    @include label-variant($light-color, $active-color);
-  }
+	// Label colors
+	&.label-primary {
+		@include label-variant($light-color, $primary-color);
+	}
+    
+    &.label-secondary {
+		@include label-variant($light-color, $secondary-color);
+	}
 
-  &.label-success {
-    @include label-variant($light-color, $success-color);
-  }
+	&.label-success {
+		@include label-variant($light-color, $success-color);
+	}
 
-  &.label-warning {
-    @include label-variant($light-color, $warning-color);
-  }
+	&.label-warning {
+		@include label-variant($light-color, $warning-color);
+	}
 
-  &.label-error {
-    @include label-variant($light-color, $error-color);
-  }
+	&.label-error {
+		@include label-variant($light-color, $error-color);
+	}
 }
